src/scss/style.scss
@import "variables";

body {
  font-family: 'TTLakes', sans-serif;
  overflow-x: hidden;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

ul {
  list-style: none;
}

.img {
  width: 100%;

}

.main-container {
  position: relative;
  max-width: 1440px;
  margin: 0 auto;
}


.btn {
  position: relative;
  width: 40px;
  height: 40px;
  background-color: $action-color;
  border: none;
  border-radius: 50%;
  transition: transform .5s, background-color .5s;

  &:hover {
    cursor: pointer;
    background-color: $hover-color;
    transform: scale(1.05);
  }

  &__svg {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}
.header__logo-items {
  .callback-icons {
    display: none;
  }
}

.container {
  min-width: 320px;
  overflow: hidden;
  margin: 0 auto;
  background-color: $main-color;
}


.subtitle {
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: -0.2px;
  text-transform: uppercase;

  color: $gray;
}

input::placeholder, textarea::placeholder {
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: -0.2px;

  color: $gray-light;
}

.swiper-pagination {
  position: static;
  margin-top: 10px;
}

//Burger button

.burger {
  position: relative;
  width: 40px;
  height: 40px;


  background-color: $action-color;
  border-radius: 50%;

  &::before {
    content: '';
    position: absolute;
    top: 12px;
    left: 11px;
    width: 18px;
    height: 2px;

    background-color: $secondary-color;
    border-radius: 2px;
  }

  &::after {
    content: '';
    position: absolute;
    top: 19px;
    left: 11px;
    width: 10px;
    height: 2px;

    background-color: $secondary-color;
    border-radius: 2px;
  }

  span {
    position: absolute;
    top: 26px;
    left: 11px;
    width: 14px;
    height: 2px;

    background-color: $secondary-color;
    border-radius: 2px;
  }

  &:hover {
    cursor: pointer;
  }
}

.link-btn {
  position: relative;
  width: 40px;
  height: 40px;
  margin-right: 16px;

  .link-btn__circle {
    position: absolute;
  }

  .link-btn__arrow {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: left .3s;
  }
}

.button {
  position: relative;
  display: inline-block;
  width: 119px;
  height: 32px;
  background-color: $action-color;
  border: none;
  border-radius: 16px;

  font-weight: 600;
  font-size: 12px;
  line-height: 24px;
  letter-spacing: -0.15px;
  text-transform: uppercase;

  color: $secondary-color;

  transition: background-color .5s, transform .5s;

  button {
    width: 100%;
    height: 100%;
    background-color: transparent;
    border: none;

    &:hover {
      cursor: pointer;

    }
  }

  span {
    position: absolute;
    top: 4px;
    left: 12px;

  }

  &-arrow {
    position: absolute;
    top: 11px;
    right: 16px;
    transition: transform .5s;
  }

  &:hover {
    cursor: pointer;
    background-color: $hover-color;
    transform: scale(1.03);

    .button-arrow {
      transform: translateX(2px);
    }
  }
}



.hidden {
  display: none;
}

@media (min-width: 1088px) {
  .wrapper {
    margin-left: 320px;
  }

  .aside {
    .aside__header {
      justify-content: space-between;
    }
  }

  .aside__btn {
    display: none;
  }

  .aside {
    transform: translateY(120%);
  }
}

